made displayed board size dynamic fixed results output on smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+:root {
+  --min-board-size: 300px;
+}
 .App {
   width: 100%;
   height: 100%;
