--- a/src/components/board/Die.css
+++ b/src/components/board/Die.css
@@ -6,7 +6,7 @@
     padding: 5px;
     border: 2px;
     display: inline-flex;
-    font-size: 200%;
+    font-size: 10vw;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #244cdd;
