--- a/src/components/results/ResultsOutput.css
+++ b/src/components/results/ResultsOutput.css
@@ -1,4 +1,6 @@
 .word-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     overflow: auto;
-    columns: 5;
+    width: 100%;
 }
